--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "private": true,
-  "devDependencies": {
-    "parcel": "^1.12.4",
-    "purescript": "^0.13.8",
-    "spago": "^0.15.3"
-  },
+  "name": "purescript-gesso",
+  "version": "1.0.0",
+  "description": "A HTML canvas wrapper in PureScript for creating graphical standalone or Halogen applications",
   "scripts": {
-    "build": "spago build",
-    "serve": "parcel dev/index.html --open",
-    "build-prod": "mkdir -p prod && cp dev/index.html prod/ && rm -rf dist && spago bundle-app --to prod/index.js && parcel build prod/index.html"
+    "example-all": "",
+    "example-clock": "spago --config examples/clock/spago.dhall --main Example.clock.Main --to examples/clock/dist/example.js",
+    "example-unit-grid": "spago --config examples/unit-grid/spago.dhall --main Example.unit-grid.Main --to examples/unit-grid/dist/example.js",
+    "example-paint-io": "spago --config examples/paint-io/spago.dhall --main Example.paint-io.Main --to examples/paint-io/dist/example.js",
+    "example-paint-global": "spago --config examples/paint-global/spago.dhall --main Example.paint-global.Main --to examples/paint-global/dist/example.js"
+  },
+  "devDependencies": {
+    "spago": "^0.18.1"
   }
 }
