--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "example-all": "./build-examples.sh",
     "example-hello": "spago --config examples/hello/spago.dhall bundle-app --main Example.Hello.Main --to examples/hello/dist/example.js",
     "example-bouncing-ball": "spago --config examples/bouncing-ball/spago.dhall bundle-app --main Example.BouncingBall.Main --to examples/bouncing-ball/dist/example.js",
+    "example-controlling-ball": "spago --config examples/controlling-ball/spago.dhall bundle-app --main Example.ControllingBall.Main --to examples/controlling-ball/dist/example.js",
     "example-clock": "spago --config examples/clock/spago.dhall bundle-app --main Example.Clock.Main --to examples/clock/dist/example.js",
     "example-unit-grid": "spago --config examples/unit-grid/spago.dhall bundle-app --main Example.UnitGrid.Main --to examples/unit-grid/dist/example.js",
     "example-paint-io": "spago --config examples/paint-io/spago.dhall bundle-app --main Example.PaintIO.Main --to examples/paint-io/dist/example.js",
