--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "example-controlling-ball": "spago --config examples/controlling-ball/spago.dhall bundle-app --main Example.ControllingBall.Main --to examples/controlling-ball/dist/example.js",
     "example-clock": "spago --config examples/clock/spago.dhall bundle-app --main Example.Clock.Main --to examples/clock/dist/example.js",
     "example-unit-grid": "spago --config examples/unit-grid/spago.dhall bundle-app --main Example.UnitGrid.Main --to examples/unit-grid/dist/example.js",
-    "example-paint-io": "spago --config examples/paint-io/spago.dhall bundle-app --main Example.PaintIO.Main --to examples/paint-io/dist/example.js",
-    "example-paint-global": "spago --config examples/paint-global/spago.dhall bundle-app --main Example.PaintGlobal.Main --to examples/paint-global/dist/example.js"
+    "example-paint-io": "spago --config examples/paint-io/spago.dhall bundle-app --main Example.PaintIO.Main --to examples/paint-io/dist/example.js"
   },
   "devDependencies": {
     "purescript": "0.14.0",
