First attempt at a new Scaler for arbitrary records.
Scaler is a record with a "scaler :: Builder {|r} {|r}" field and one field per rect property.

Scaler has a type variable for a CoordinateSystem and the arbitrary record to be scaled.

mkScalers adds defaults, applies each field scaling function, and removes defaults.

--- a/spago.yaml
+++ b/spago.yaml
@@ -13,8 +13,10 @@ package:
     - lists
     - maybe
     - prelude
+    - record-extra
     - safe-coerce
     - tuples
+    - typelevel-prelude
     - web-clipboard
     - web-dom
     - web-events
