--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: purescript-contrib/setup-purescript@v3.1.0
+      with:
+        spago: "latest"
     - uses: actions/cache@v4
       with:
         key: ${{ runner.os }}-spago-${{ hashFiles('**/spago*') }}
