Fix example building command?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           output
           examples/*/dist
     - run: spago build
-    - run: build-examples.sh
+    - run: ./build-examples.sh
 
     # Is this necessary?
     # - name: Deploy to GitHub Pages
