Add esbuild to CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           .spago
           output
           examples/*/dist
+    - run: npm install esbuild
     - run: spago build
     - run: ./build-examples.sh
 
