Fix deploy workflow name

--- a/.github/workflows/build-examples-deploy-pages.yml
+++ b/.github/workflows/build-examples-deploy-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Build Gesso examples and deploy with Jekyll to GitHub Pages
 
 on:
   push:
