Move most Interactions stuff into new Interactions.Internal module to hide 'toProps' and Interaction constructor. Change Interactions.Events from a simple re-export module to contain aliases for all interaction event constructors. Add PointerEvent array to Interactions record even though they're not supported yet

--- a/spago.yaml
+++ b/spago.yaml
@@ -21,6 +21,7 @@ package:
     - web-dom
     - web-events
     - web-html
+    - web-pointerevents
     - web-touchevents
     - web-uievents
   name: gesso
