Tell GH pages deploy not to upload the rebuilt docs when building a PR

--- a/.github/workflows/build-examples-deploy-pages.yml
+++ b/.github/workflows/build-examples-deploy-pages.yml
@@ -56,6 +56,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    # Don't deploy the new documentation if this is just a PR
+    if: ${{ github.event_name != 'pull_request' }}
     needs: build
     steps:
       - name: Deploy to GitHub Pages
