Clean up/format examples. Change module names from Example.<Name>.Main to Gesso.Example.<Name>. Rename some examples.

--- a/examples/analog-clock/spago.yaml
+++ b/examples/analog-clock/spago.yaml
@@ -2,17 +2,22 @@ package:
   dependencies:
     - gesso
     - aff
+    - arrays
     - canvas
     - console
     - css
+    - datetime
     - dom-indexed
     - effect
+    - enums
     - foldable-traversable
     - halogen
     - halogen-subscriptions
     - integers
     - lists
     - maybe
+    - now
+    - numbers
     - prelude
     - safe-coerce
     - tuples
@@ -22,7 +27,7 @@ package:
     - web-html
     - web-touchevents
     - web-uievents
-  name: gesso-example-hello
+  name: gesso-example-analog-clock
   bundle:
-    module: Gesso.Example.Hello
+    module: Gesso.Example.AnalogClock
     outfile: "dist/example.js"
