--- a/examples/keyboard/spago.yaml
+++ b/examples/keyboard/spago.yaml
@@ -13,6 +13,7 @@ package:
     - integers
     - lists
     - maybe
+    - numbers
     - prelude
     - safe-coerce
     - tuples
@@ -22,7 +23,7 @@ package:
     - web-html
     - web-touchevents
     - web-uievents
-  name: gesso-example-hello
+  name: gesso-example-keyboard
   bundle:
-    module: Gesso.Example.Hello
+    module: Gesso.Example.Keyboard
     outfile: "dist/example.js"
