--- a/spago.yaml
+++ b/spago.yaml
@@ -2,7 +2,7 @@ package:
   name: gesso
   description: "A simple <canvas> adapter for standalone applications and Halogen components"
   dependencies:
-    - aff: ">=8.0.0 <9.0.0"
+    - aff: ">=7.0.0 <9.0.0"
     - canvas: ">=6.0.0 <7.0.0"
     - css: ">=6.0.0 <7.0.0"
     - dom-indexed: ">=11.0.0 <13.0.0"
@@ -26,14 +26,15 @@ package:
     - web-html: ">=4.1.0 <5.0.0"
     - web-pointerevents: ">=1.0.0 <3.0.0"
     - web-touchevents: ">=4.0.0 <5.0.0"
-    - web-uievents: ">=5.0.0 <6.0.0"
+    - web-uievents: ">=4.0.0 <6.0.0"
   publish:
     version: 1.0.0
     license: MIT
+    exclude:
+      - "examples/*"
     location:
       githubOwner: smilack
       githubRepo: purescript-gesso
 workspace:
   packageSet:
     registry: 62.2.6
-  extraPackages: {}
